@@ -110,6 +110,8 @@ tasks.register('smokeTest', Test) {
     description = "Runs smoke tests."
     group = "verification"
 
+    dependsOn smokeTestResources
+
     testClassesDirs = project.sourceSets["smokeTest"].output.classesDirs
     classpath = project.sourceSets["smokeTest"].runtimeClasspath
 
@@ -129,9 +131,6 @@ tasks.register('smokeTest', Test) {
 
     systemProperty "combinedWorkerHealthHttp",
             project.getProperties().getOrDefault("combinedWorkerHealthHttp", combinedWorker ? "http://localhost:7004/" : null)
-}
 
-
-tasks.named('smokeTest', Test) {
-    dependsOn smokeTestResources
+    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
 }
